# pycharting

./: Makefile  README.md  demo.py  mkdocs.yml  pyproject.toml
.github/workflows/: rhiza_release.yml
.rhiza/: template.yml
docs/: how-it-works.md
src/pycharting/: __init__.py
src/pycharting/api/: interface.py  routes.py
src/pycharting/core/: lifecycle.py  server.py
src/pycharting/data/: ingestion.py
src/pycharting/web/static/: viewport-demo.html
src/pycharting/web/static/js/: chart.js  viewport.js
tests/: test_api_routes.py  test_data_ingestion.py  test_data_slicing.py  test_import.py  test_interface.py  test_lifecycle.py  test_server.py
