[tool.poetry]
name = "pycharting"
version = "0.2.16"
description = "High-performance financial charting library for OHLC data visualization with technical indicators"
authors = ["ali askar <26202651+alihaskar@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/alihaskar/pycharting"
repository = "https://github.com/alihaskar/pycharting"
keywords = ["charting", "finance", "ohlc", "technical-indicators", "trading", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
]

# expose the public package as `pycharting`
packages = [
    { include = "pycharting", from = "src" }
]

# Include package data (web static files)
include = [
    { path = "src/pycharting/web/static/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0,<1.0.0"
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
pydantic = ">=2.7.0,<3.0.0"
uvicorn = { version = ">=0.24.0,<1.0.0", extras = ["standard"] }
pytz = ">=2024.1,<2026.0"
pyarrow = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<9.0.0"
httpx = ">=0.27.0,<0.29.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
