[project]
name = "pycharting"
version = "0.2.16"
description = "High-performance financial charting library for OHLC data visualization with technical indicators"
authors = [
    {name = "ali askar", email = "26202651+alihaskar@users.noreply.github.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["charting", "finance", "ohlc", "technical-indicators", "trading", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pytz>=2024.1,<2026.0",
    "pyarrow>=22.0.0,<23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0,<0.29.0",
]

[project.urls]
Homepage = "https://github.com/alihaskar/pycharting"
Repository = "https://github.com/alihaskar/pycharting"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycharting"]
