[project]
name = "pycharting"
version = "0.2.16"
description = "High-performance financial charting library for OHLC data visualization with technical indicators"
authors = [
    {name = "ali askar", email = "26202651+alihaskar@users.noreply.github.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["charting", "finance", "ohlc", "technical-indicators", "trading", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
]

[dependency-groups]
# Test-only tooling, used under tests/ (which deptry does not scan), not in the
# src/ package. Declared as PEP 735 dependency groups so `uv run` installs them
# by default (see [tool.uv].default-groups) — this keeps `uv run pytest` working
# without `--all-extras`, including under `--resolution lowest-direct`. httpx is
# required transitively by fastapi.testclient but must be pinned directly so the
# lowest-direct resolver still installs it.
test = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0,<0.29.0",
]
lint = [
    "ruff>=0.6.0",
]

[tool.uv]
# Install the test and lint groups by default so `uv run` has them available
# without an explicit `--group`/`--all-groups` flag.
default-groups = ["test", "lint"]

[project.urls]
Homepage = "https://github.com/alihaskar/pycharting"
Repository = "https://github.com/alihaskar/pycharting"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycharting"]
